Fix the off canvas menu size being too big

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,3 +158,18 @@ footer ul.inline-list li {
 footer ul.inline-list {
     margin-bottom: 0;
 }
+
+/* MISC */
+
+.right-off-canvas-menu {
+    width: 12rem;
+}
+
+.move-left > .inner-wrap {
+    -ms-transform: translate(-12rem, 0);
+    -webkit-transform: translate3d(-12rem, 0, 0);
+    -moz-transform: translate3d(-12rem, 0, 0);
+    -ms-transform: translate3d(-12rem, 0, 0);
+    -o-transform: translate3d(-12rem, 0, 0);
+    transform: translate3d(-12rem, 0, 0); }
+}
